[package]
name = "bn"
version = "0.5.0"
authors = ["SECBIT"]
description = "Pairing cryptography with the Barreto-Naehrig curve"
keywords = ["pairing","crypto","cryptography"]
readme = "README.md"
license = "MIT OR Apache-2.0"

[[bench]]
name = "api"

[dependencies]
rand = "0.7"
rustc-serialize = "~0.3.19"
byteorder = "~0.5.3"

[dev-dependencies.bincode]
version = "~0.6.0"
default-features = false
features = ["rustc-serialize"]
